# cineseek

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/src/cineseek/: __init__.py  api.py  cli.py  models.py  parser.py
backend/src/cineseek/providers/: __init__.py  wikidata.py
docs/: 01-业务需求说明书.md  02-需求规格说明书.md  03-概要设计说明书.md  04-详细设计说明书.md  05-接口设计说明书.md  06-测试用例与测试记录.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: style.css
