[project]
name = "cineseek"
version = "0.1.0"
description = "CineSeek：支持命令行、Web API 与 Vue 前端的电影信息搜索工具（基于 Wikidata/Wikipedia，避开 TMDB）。"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "shaoz" }
]
keywords = ["movie", "film", "search", "wikidata", "fastapi", "vue", "cli"]
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "typer>=0.12",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "guessit>=3.8",
  "rich>=13.7",
  "python-dotenv>=1.0",
  "opencc-python-reimplemented>=0.1.7"
]

[project.scripts]
cineseek = "cineseek.cli:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cineseek"]
